feat: Add MCP integration architecture and Render example

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Dalton",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.12.2",
     "chalk": "^5.6.2",
     "commander": "^14.0.1",
     "dotenv": "^17.2.3",
