--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Dalton",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@mistralai/mistralai": "^1.10.0",
     "axios": "^1.12.2",
     "chalk": "^5.6.2",
     "commander": "^14.0.1",
